--- a/nicepage.css
+++ b/nicepage.css
@@ -37888,8 +37888,8 @@ a.u-link.u-text-hover-grey-90:hover {
 }
 
 .u-header .u-image-1 {
-  width: 64px;
-  height: 32px;
+  width: 85px;
+  height: 64px;
   margin: 22px auto 0 0;
 }
 
@@ -37911,6 +37911,10 @@ a.u-link.u-text-hover-grey-90:hover {
   font-size: 1.25rem;
 }
 @media (max-width: 1199px) {
+  .u-header .u-image-1 {
+    width: 85px;
+  }
+
   .u-header .u-menu-1 {
     width: auto;
   }
