--- a/nicepage.css
+++ b/nicepage.css
@@ -38293,6 +38293,9 @@ a.u-link.u-text-hover-grey-90:hover {
 
 .u-footer .u-text-1 {
   width: 417px;
+  font-size: 0.625rem;
+  font-weight: 300;
+  background-image: none;
   margin: 49px auto;
 }
 @media (max-width: 1199px) {
