site web version 03

--- a/Accueil.css
+++ b/Accueil.css
@@ -737,7 +737,7 @@
 
 .u-section-6 .u-image-1 {
   min-height: 773px;
-  background-image: url("images/_20220122_110307.JPG");
+  background-image: url("images/optimise.JPG");
   background-position: 50% 50%;
 }
 
