--- a/Accueil.css
+++ b/Accueil.css
@@ -19,25 +19,17 @@
 }
 
 .u-section-1 .u-text-1 {
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  font-size: 1.125rem;
-  font-weight: 700;
-  margin: 0;
-}
-
-.u-section-1 .u-text-2 {
   font-size: 4.5rem;
   letter-spacing: 1px;
   line-height: 0.8;
-  margin: 16px auto 0;
+  margin: 40px auto 0;
 }
 
-.u-section-1 .u-text-3 {
+.u-section-1 .u-text-2 {
   text-transform: uppercase;
   font-weight: 400;
   letter-spacing: 3px;
-  margin: 24px 209px 0;
+  margin: 24px 26px 0;
 }
 
 @media (max-width: 1199px) {
@@ -55,9 +47,9 @@
     width: 720px;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-left: 204px;
-    margin-right: 204px;
+  .u-section-1 .u-text-2 {
+    margin-left: 21px;
+    margin-right: 21px;
   }
 }
 
@@ -75,16 +67,12 @@
   }
 
   .u-section-1 .u-text-1 {
-    font-size: 1rem;
-  }
-
-  .u-section-1 .u-text-2 {
     font-size: 3.75rem;
   }
 
-  .u-section-1 .u-text-3 {
-    margin-left: 134px;
-    margin-right: 134px;
+  .u-section-1 .u-text-2 {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
 
@@ -106,13 +94,8 @@
     padding-right: 10px;
   }
 
-  .u-section-1 .u-text-2 {
+  .u-section-1 .u-text-1 {
     font-size: 3rem;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-left: 34px;
-    margin-right: 34px;
   }
 } .u-section-2 {
   background-image: none;
@@ -127,28 +110,29 @@
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 493px;
+  min-height: 520px;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 60px;
+  padding: 60px 33px;
 }
 
 .u-section-2 .u-text-1 {
   font-size: 6.9375rem;
   font-weight: 900;
   line-height: 0.8;
-  margin: 0;
+  margin: 0 27px;
 }
 
 .u-section-2 .u-text-2 {
-  font-size: 2.25rem;
-  margin: 5px auto 0 0;
+  font-size: 1.5rem;
+  line-height: 1.4;
+  margin: -21px 0 0 14px;
 }
 
 .u-section-2 .u-text-3 {
   line-height: 3.33;
-  margin: 16px auto 0 0;
+  margin: 16px auto 0 27px;
 }
 
 .u-section-2 .u-layout-cell-2 {
@@ -169,12 +153,12 @@
 .u-section-2 .u-text-5 {
   font-size: 1.875rem;
   font-weight: 700;
-  margin: 5px 3px 0;
+  margin: 0 auto 0 3px;
 }
 
 .u-section-2 .u-text-6 {
   line-height: 3.33;
-  margin: 16px auto 0 0;
+  margin: 21px auto 0 0;
 }
 
 @media (max-width: 1199px) {
@@ -188,7 +172,16 @@
   }
 
   .u-section-2 .u-layout-cell-1 {
-    min-height: 407px;
+    min-height: 429px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-2 .u-text-2 {
+    margin-left: 0;
   }
 
   .u-section-2 .u-layout-cell-2 {
