--- a/Contact.css
+++ b/Contact.css
@@ -119,7 +119,7 @@
 .u-section-2 .u-image-4 {
   width: 37px;
   height: 30px;
-  margin: 57px auto 0 260px;
+  margin: 57px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -136,12 +136,7 @@
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 443px;
-  }
-
-  .u-section-2 .u-image-4 {
-    margin-top: 59px;
-    margin-left: auto;
+    min-height: 435px;
   }
 }
 
