--- a/Contact.css
+++ b/Contact.css
@@ -86,7 +86,7 @@
 .u-section-2 .u-image-2 {
   width: 41px;
   height: 34px;
-  margin: 63px auto 0;
+  margin: 0 auto;
 }
 
 .u-section-2 .u-text-1 {
@@ -119,7 +119,7 @@
 .u-section-2 .u-image-4 {
   width: 37px;
   height: 30px;
-  margin: 57px auto 0;
+  margin: 57px auto 122px;
 }
 
 @media (max-width: 1199px) {
@@ -138,6 +138,18 @@
   .u-section-2 .u-layout-cell-2 {
     min-height: 435px;
   }
+
+  .u-section-2 .u-image-2 {
+    margin-top: 44px;
+  }
+
+  .u-section-2 .u-text-1 {
+    width: auto;
+  }
+
+  .u-section-2 .u-image-4 {
+    margin-bottom: 0;
+  }
 }
 
 @media (max-width: 991px) {
@@ -150,7 +162,16 @@
   }
 
   .u-section-2 .u-layout-cell-2 {
-    min-height: 100px;
+    min-height: 333px;
+  }
+
+  .u-section-2 .u-container-layout-2 {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: 45px;
   }
 
   .u-section-2 .u-text-1 {
@@ -173,9 +194,17 @@
     padding-right: 10px;
   }
 
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 325px;
+  }
+
   .u-section-2 .u-container-layout-2 {
     padding-left: 10px;
     padding-right: 10px;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: 22px;
   }
 
   .u-section-2 .u-text-1 {
@@ -193,8 +222,16 @@
     min-height: 315px;
   }
 
+  .u-section-2 .u-layout-cell-2 {
+    min-height: 322px;
+  }
+
   .u-section-2 .u-container-layout-2 {
     padding-left: 8px;
     padding-right: 8px;
+  }
+
+  .u-section-2 .u-image-2 {
+    margin-top: 37px;
   }
 }
