--- a/Contact.css
+++ b/Contact.css
@@ -232,6 +232,10 @@
   }
 
   .u-section-2 .u-image-2 {
-    margin-top: 37px;
+    margin-top: 4px;
+  }
+
+  .u-section-2 .u-image-4 {
+    margin-bottom: 122px;
   }
 }
