--- a/Home.css
+++ b/Home.css
@@ -11,6 +11,7 @@
   width: 730px;
   min-height: 431px;
   box-shadow: 0 0 40px 4px rgba(26,26,26,0.8);
+  height: auto;
   margin: 60px auto;
 }
 
@@ -26,15 +27,24 @@
 }
 
 .u-section-1 .u-text-2 {
-  font-weight: normal;
-  line-height: 2.25;
-  letter-spacing: normal;
-  margin: 24px 26px 0;
+  font-size: 1.5rem;
+  margin: 44px 46px 0 auto;
+}
+
+.u-section-1 .u-btn-1 {
+  background-image: none;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 51px auto 0;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
     min-height: 619px;
+  }
+
+  .u-section-1 .u-group-1 {
+    height: auto;
   }
 }
 
@@ -46,11 +56,6 @@
   .u-section-1 .u-group-1 {
     width: 720px;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 21px;
-    margin-right: 21px;
-  }
 }
 
 @media (max-width: 767px) {
@@ -59,34 +64,21 @@
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 369px;
-    margin-top: 122px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
+    width: 540px;
   }
 
   .u-section-1 .u-text-1 {
     font-size: 3.75rem;
   }
-
-  .u-section-1 .u-text-2 {
-    margin-left: 0;
-    margin-right: 0;
-  }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 604px;
+    min-height: 224px;
   }
 
   .u-section-1 .u-group-1 {
-    min-height: 370px;
-    margin-top: 111px;
-    width: auto;
-    margin-right: initial;
-    margin-left: initial;
+    width: 340px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -98,35 +90,30 @@
     font-size: 3rem;
     letter-spacing: -3px;
   }
-
-  .u-section-1 .u-text-2 {
-    font-weight: 300;
-    line-height: 1.2;
-    letter-spacing: -1px;
-  }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 279px;
+  min-height: 225px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
   margin-top: 1px;
-  margin-bottom: 0;
+  margin-bottom: 1px;
 }
 
 .u-section-2 .u-layout-cell-1 {
-  min-height: 365px;
+  min-height: 253px;
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 0 28px;
+  padding: 0 26px;
 }
 
 .u-section-2 .u-text-1 {
-  margin: 0 10px 0 0;
+  font-size: 1.5rem;
+  margin: 0;
 }
 
 @media (max-width: 1199px) {
@@ -136,10 +123,6 @@
 
   .u-section-2 .u-layout-cell-1 {
     min-height: 175px;
-  }
-
-  .u-section-2 .u-text-1 {
-    margin-right: 0;
   }
 }
 
@@ -183,7 +166,7 @@
 }
 
 .u-section-3 .u-image-1 {
-  min-height: 1078px;
+  min-height: 1192px;
   background-image: url("images/pexelsphoto1029844.jpeg");
   background-position: 0% 72.03%;
 }
@@ -225,7 +208,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 889px;
+    min-height: 983px;
   }
 
   .u-section-3 .u-image-2 {
@@ -239,7 +222,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 681px;
+    min-height: 753px;
   }
 
   .u-section-3 .u-text-1 {
@@ -262,7 +245,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 1022px;
+    min-height: 1130px;
   }
 
   .u-section-3 .u-container-layout-1 {
@@ -290,7 +273,7 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 643px;
+    min-height: 711px;
   }
 
   .u-section-3 .u-text-1 {
@@ -331,18 +314,18 @@
 }
 
 .u-section-4 .u-image-2 {
-  min-height: 745px;
+  min-height: 893px;
   background-image: url("images/pexelsphoto1650627.jpeg");
   background-position: 50% 100%;
 }
 
 .u-section-4 .u-container-layout-2 {
-  padding: 30px;
+  padding: 13px 30px;
 }
 
 .u-section-4 .u-text-2 {
   font-size: 3rem;
-  margin: 505px 91px 0;
+  margin: 522px 91px 0;
 }
 
 @media (max-width: 1199px) {
@@ -364,7 +347,7 @@
   }
 
   .u-section-4 .u-image-2 {
-    min-height: 614px;
+    min-height: 736px;
   }
 
   .u-section-4 .u-text-2 {
@@ -387,7 +370,7 @@
   }
 
   .u-section-4 .u-image-2 {
-    min-height: 470px;
+    min-height: 564px;
   }
 
   .u-section-4 .u-text-2 {
@@ -412,7 +395,7 @@
   }
 
   .u-section-4 .u-image-2 {
-    min-height: 705px;
+    min-height: 846px;
   }
 
   .u-section-4 .u-container-layout-2 {
@@ -441,7 +424,7 @@
   }
 
   .u-section-4 .u-image-2 {
-    min-height: 444px;
+    min-height: 533px;
   }
 
   .u-section-4 .u-text-2 {
@@ -459,26 +442,25 @@
 }
 
 .u-section-5 .u-text-1 {
-  font-size: 6rem;
-  font-weight: 700;
-  margin: 272px auto 0;
-}
-
-.u-section-5 .u-text-2 {
-  font-size: 1.5rem;
-  margin: 32px auto 0;
+  font-size: 1.125rem;
+  width: 559px;
+  margin: 220px auto 0;
 }
 
 .u-section-5 .u-btn-1 {
   background-image: none;
   text-transform: uppercase;
   font-weight: 700;
-  margin: 40px auto 60px;
+  margin: 72px auto 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
     min-height: 660px;
+  }
+
+  .u-section-5 .u-btn-1 {
+    width: 133px;
   }
 }
 
@@ -492,6 +474,10 @@
   .u-section-5 .u-sheet-1 {
     min-height: 380px;
   }
+
+  .u-section-5 .u-text-1 {
+    width: 540px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -500,10 +486,6 @@
   }
 
   .u-section-5 .u-text-1 {
-    font-size: 3.75rem;
-  }
-
-  .u-section-5 .u-text-2 {
-    font-size: 1.375rem;
+    width: 340px;
   }
 }
