--- a/Home.css
+++ b/Home.css
@@ -56,6 +56,18 @@
   .u-section-1 .u-group-1 {
     width: 720px;
   }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-left: 46px;
+    margin-right: 46px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-left: 39px;
+    margin-right: 39px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -89,6 +101,10 @@
   .u-section-1 .u-text-1 {
     font-size: 3rem;
     letter-spacing: -3px;
+  }
+
+  .u-section-1 .u-text-2 {
+    font-size: 1.25rem;
   }
 } .u-section-2 {
   background-image: none;
@@ -148,12 +164,17 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-2 .u-sheet-1 {
+    min-height: 232px;
+  }
+
   .u-section-2 .u-layout-cell-1 {
-    min-height: 575px;
+    min-height: 260px;
   }
 
   .u-section-2 .u-text-1 {
     width: auto;
+    font-size: 1.25rem;
   }
 } .u-section-3 {
   margin-top: 0;
@@ -482,10 +503,17 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 239px;
+    min-height: 649px;
   }
 
   .u-section-5 .u-text-1 {
-    width: 340px;
+    width: auto;
+    margin-top: 199px;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-5 .u-btn-1 {
+    margin-top: 75px;
   }
 }
