--- a/nicepage.css
+++ b/nicepage.css
@@ -41385,12 +41385,12 @@ a.u-link.u-text-hover-grey-90:hover {
   }
 }
 .u-footer .u-sheet-1 {
-  min-height: 273px;
+  min-height: 333px;
 }
 
 .u-footer .u-text-1 {
   width: 631px;
-  margin: 74px auto 0;
+  margin: 23px auto 0;
 }
 
 .u-footer .u-btn-1 {
@@ -41400,7 +41400,7 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-image-1 {
   width: 128px;
   height: 96px;
-  margin: -160px auto 0 -34px;
+  margin: -9px auto 0 -34px;
 }
 
 .u-footer .u-logo-image-1 {
@@ -41414,11 +41414,24 @@ a.u-link.u-text-hover-grey-90:hover {
   width: 69px;
   min-width: 55px;
   white-space: nowrap;
-  margin: -60px 0 101px auto;
+  margin: -59px 0 0 auto;
 }
 
 .u-footer .u-icon-2 {
   height: 100%;
+}
+
+.u-footer .u-btn-2 {
+  border-style: solid;
+  letter-spacing: 0px;
+  font-weight: 700;
+  text-transform: uppercase;
+  margin: -23px auto 0;
+}
+
+.u-footer .u-text-2 {
+  width: 631px;
+  margin: 53px auto 60px;
 }
 @media (max-width: 1199px) {
   .u-footer .u-image-1 {
@@ -41430,17 +41443,29 @@ a.u-link.u-text-hover-grey-90:hover {
     width: 56px;
     min-width: 42px;
   }
+
+  .u-footer .u-btn-2 {
+    margin-top: -3px;
+  }
+
+  .u-footer .u-text-2 {
+    margin-top: 33px;
+  }
 }
 @media (max-width: 991px) {
   .u-footer .u-image-1 {
     margin-top: 20px;
   }
-}
-@media (max-width: 767px) {
-  .u-footer .u-sheet-1 {
-    min-height: 200px;
+
+  .u-footer .u-btn-2 {
+    margin-top: -3px;
   }
 
+  .u-footer .u-text-2 {
+    margin-bottom: 56px;
+  }
+}
+@media (max-width: 767px) {
   .u-footer .u-text-1 {
     width: 540px;
     margin-top: 191px;
@@ -41454,15 +41479,16 @@ a.u-link.u-text-hover-grey-90:hover {
     margin-top: 46px;
     margin-right: auto;
   }
+
+  .u-footer .u-text-2 {
+    width: 540px;
+    margin-bottom: 0;
+  }
 }
 @media (max-width: 575px) {
-  .u-footer .u-sheet-1 {
-    min-height: 305px;
-  }
-
   .u-footer .u-text-1 {
     width: auto;
-    margin-top: 46px;
+    margin-top: 53px;
     margin-left: 0;
     margin-right: 0;
   }
@@ -41473,15 +41499,25 @@ a.u-link.u-text-hover-grey-90:hover {
 
   .u-footer .u-image-1 {
     width: 61px;
-    height: 46px;
-    margin-top: 29px;
+    height: 45px;
+    margin-top: 146px;
     margin-left: auto;
   }
 
   .u-footer .u-social-icons-1 {
     width: 69px;
     min-width: 55px;
-    margin-top: -162px;
+    margin-top: -296px;
+  }
+
+  .u-footer .u-btn-2 {
+    margin-top: 107px;
+  }
+
+  .u-footer .u-text-2 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: 60px;
   }
 }
