--- a/About.css
+++ b/About.css
@@ -90,8 +90,8 @@
 
 .u-section-2 .u-image-1 {
   min-height: 773px;
-  background-image: url("images/optimise.JPG");
-  background-position: 50% 50%;
+  background-image: url("images/20250217_213011.jpg");
+  background-position: 69.76% 50%;
 }
 
 .u-section-2 .u-container-layout-1 {
