--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/b-min.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/pic02.jpg");
   background-position: 50% 50%;
 }
 
@@ -36,6 +36,7 @@
   text-transform: uppercase;
   font-weight: 700;
   margin: 51px auto 0;
+  padding: 17px 30px 18px;
 }
 
 @media (max-width: 1199px) {
@@ -91,6 +92,7 @@
 
   .u-section-1 .u-group-1 {
     width: 340px;
+    min-height: 448px;
   }
 
   .u-section-1 .u-container-layout-1 {
@@ -106,17 +108,21 @@
   .u-section-1 .u-text-2 {
     font-size: 1.25rem;
   }
+
+  .u-section-1 .u-btn-1 {
+    padding-bottom: 17px;
+  }
 } .u-section-2 {
   background-image: none;
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 225px;
+  min-height: 289px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
   margin-top: 1px;
-  margin-bottom: 1px;
+  margin-bottom: 60px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -124,12 +130,13 @@
 }
 
 .u-section-2 .u-container-layout-1 {
-  padding: 0 26px;
+  padding: 0 23px;
 }
 
 .u-section-2 .u-text-1 {
-  font-size: 1.5rem;
-  margin: 0;
+  font-size: 1.875rem;
+  background-image: none;
+  margin: 88px 0 0 6px;
 }
 
 @media (max-width: 1199px) {
@@ -139,6 +146,10 @@
 
   .u-section-2 .u-layout-cell-1 {
     min-height: 175px;
+  }
+
+  .u-section-2 .u-text-1 {
+    margin-left: 0;
   }
 }
 
@@ -174,7 +185,7 @@
 
   .u-section-2 .u-text-1 {
     width: auto;
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
 } .u-section-3 {
   margin-top: 0;
@@ -189,8 +200,8 @@
 
 .u-section-3 .u-image-1 {
   min-height: 1134px;
-  background-image: url("images/pexelsphoto1029844.jpeg");
-  background-position: 0% 72.03%;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url("images/Cecile-Core-home.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-3 .u-container-layout-1 {
@@ -200,7 +211,7 @@
 .u-section-3 .u-text-1 {
   font-size: 3rem;
   width: 885px;
-  margin: 100px auto 0;
+  margin: 557px auto 0;
 }
 
 @media (max-width: 1199px) {
@@ -260,36 +271,37 @@
   }
 
   .u-section-3 .u-image-1 {
-    min-height: 791px;
+    min-height: 832px;
   }
 
   .u-section-3 .u-text-1 {
     font-size: 2.25rem;
+    margin-top: 357px;
   }
 } .u-section-4 {
   margin-top: 0;
   margin-bottom: 0;
-  min-height: 994px;
+  min-height: 759px;
 }
 
 .u-section-4 .u-layout-wrap-1 {
-  margin-top: -241px;
-  margin-bottom: 0;
+  width: calc(((100% - 1140px) / 2) + 1190px);
+  margin: -241px 0 0;
 }
 
 .u-section-4 .u-image-1 {
-  min-height: 1235px;
-  background-image: url("images/pexelsphoto1650627.jpeg");
-  background-position: 50% 100%;
+  min-height: 1000px;
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.05), rgba(0,0,0,0.05)), url("images/Cecile-Core-cards.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-4 .u-container-layout-1 {
-  padding: 13px 30px;
+  padding: 13px 30px 0;
 }
 
 .u-section-4 .u-text-1 {
   font-size: 3rem;
-  margin: 763px 91px 0;
+  margin: 501px 91px 0;
 }
 
 @media (max-width: 1199px) {
@@ -297,8 +309,12 @@
     min-height: 736px;
   }
 
+  .u-section-4 .u-layout-wrap-1 {
+    width: calc(((100% - 940px) / 2) + 940px);
+  }
+
   .u-section-4 .u-image-1 {
-    min-height: 1018px;
+    min-height: 790px;
   }
 
   .u-section-4 .u-text-1 {
@@ -312,8 +328,12 @@
     min-height: 564px;
   }
 
+  .u-section-4 .u-layout-wrap-1 {
+    width: calc(((100% - 720px) / 2) + 720px);
+  }
+
   .u-section-4 .u-image-1 {
-    min-height: 780px;
+    min-height: 605px;
   }
 
   .u-section-4 .u-text-1 {
@@ -328,8 +348,12 @@
     min-height: 846px;
   }
 
+  .u-section-4 .u-layout-wrap-1 {
+    width: calc(((100% - 540px) / 2) + 540px);
+  }
+
   .u-section-4 .u-image-1 {
-    min-height: 963px;
+    min-height: 454px;
   }
 
   .u-section-4 .u-container-layout-1 {
@@ -346,36 +370,40 @@
 
 @media (max-width: 575px) {
    .u-section-4 {
-    min-height: 720px;
+    min-height: 750px;
   }
 
   .u-section-4 .u-layout-wrap-1 {
     margin-top: -47px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-4 .u-image-1 {
-    min-height: 767px;
+    min-height: 797px;
   }
 
   .u-section-4 .u-text-1 {
     font-size: 2.25rem;
-    margin-top: 569px;
+    width: auto;
+    margin-top: 431px;
     margin-left: 23px;
     margin-right: 23px;
   }
 } .u-section-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/SMALL_edz-norton-fgy3lrj4TRQ-unsplash.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.55), rgba(0,0,0,0.55)), url("images/cecile-3.JPG");
   background-position: 50% 50%;
 }
 
 .u-section-5 .u-sheet-1 {
-  min-height: 1285px;
+  min-height: 640px;
 }
 
 .u-section-5 .u-text-1 {
-  font-size: 1.125rem;
   width: 559px;
-  margin: 705px auto 0;
+  font-size: 1.25rem;
+  margin: 150px auto 0;
 }
 
 .u-section-5 .u-btn-1 {
@@ -383,11 +411,12 @@
   text-transform: uppercase;
   font-weight: 700;
   margin: 72px auto 60px;
+  padding: 17px 30px 18px;
 }
 
 @media (max-width: 1199px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 1060px;
+    min-height: 528px;
   }
 
   .u-section-5 .u-btn-1 {
@@ -397,13 +426,13 @@
 
 @media (max-width: 991px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 812px;
+    min-height: 404px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 609px;
+    min-height: 303px;
   }
 
   .u-section-5 .u-text-1 {
@@ -413,17 +442,17 @@
 
 @media (max-width: 575px) {
   .u-section-5 .u-sheet-1 {
-    min-height: 649px;
+    min-height: 667px;
   }
 
   .u-section-5 .u-text-1 {
     width: auto;
-    margin-top: 199px;
+    margin-top: 116px;
     margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-5 .u-btn-1 {
-    margin-top: 75px;
+    margin-top: 101px;
   }
 }
